kubernetes/main/platform/observability/loki/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-backend-ingress
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: backend
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: gateway
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
            - port: "9095"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-gateway-egress
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: gateway
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: backend
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
            - port: "9095"
              protocol: TCP
